--- a/_posts/0000-01-02-miami78.md
+++ b/_posts/0000-01-02-miami78.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+You have no idea how exciting this is
 Use the left arrow to go back!
